--- a/Common.Entities/Common.Entities.csproj
+++ b/Common.Entities/Common.Entities.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>Common.Entities</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="System.ComponentModel.DataAnnotations">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.ComponentModel.DataAnnotations.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
